--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,8 @@ input: GFM                            # use Github Flavored Markdown !important
 
 
 # 评论系统
-# Disqus（https://disqus.com/）
-# disqus_username: fsoooo
+#Disqus（https://disqus.com/）
+disqus_username: fsoooo
 
 # Gitalk
 gitalk:
