--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: fsoooo Blog
 SEOTitle: 王石磊的博客 | fsoooo Blog
 header-img: img/home-bg.jpg
 email: fsoooo@126.com
-description: "关于程序与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
+description: "这里是 @fsoooo 王石磊 的个人博客，与你一起发现更大的世界。"
 keyword: "王石磊, wangsl, fsoooo, 四石, @fsoooo, @wangsl, 王石磊的博客, fsoooo Blog, 博客, 个人网站, 互联网"
 url: "https://fsoooo.github.io"
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
