--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ input: GFM                            # use Github Flavored Markdown !important
 
 # 评论系统
 #Disqus（https://disqus.com/）
-disqus_username: fsoooo
+#disqus_username: fsoooo
 
 # Gitalk
 gitalk:
