--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ zhihu_username:     fsoooo
 github_username:    fsoooo
 jianshu_username:   910c6f95a495
 gitee_username: wangslei
-#twitter_username:   fsoooo
+#twitter_username:   fstoooo #https://twitter.com/fstoooo
+#instagram_username:   fstoooo  #https://www.instagram.com/fstoooo
+#facebook_username:   fstoooo   #https://www.facebook.com/fsoooo
 
 
 
