--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ sidebar-avatar: /img/fsoooo-headImg.jpg      # use absolute URL, seeing it's use
 RSS: false
 weibo_username:     fsoooo
 zhihu_username:     fsoooo
-github_username:    fsoooo
+#github_username:    fsoooo
 jianshu_username:   910c6f95a495
 #gitee_username: wangslei
 twitter_username:   fstoooo #https://twitter.com/fstoooo
